
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dlnp2", email = "hideta7.dev@gmail.com"},
]
dependencies = [
    "openai-whisper>=20230314",
    "openai>=0.27.8",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.3.0",
]
